2010-01-06  Fatih Aşıcı  <fatih@pardus.org.tr>
	* zorg-cli:
		-d parameter can take an empty string as the driver name
		that means the driver will be selected by the X server.

2009-11-17  Fatih Aşıcı  <fatih@pardus.org.tr>
	* data/DriversDB:
		Remove nvidia71 driver as it doesn't work with new X servers.
	* zorg/hwdata.py:
		Remove names of old nvidia packages.

2009-10-30  Fatih Aşıcı  <fatih@pardus.org.tr>
	* data/DriversDB:
		Add new NVIDIA cards.

2009-10-26  Fatih Aşıcı  <fatih@pardus.org.tr>
	* data/DriversDB:
		Add new ATI cards.

2009-05-01  Fatih Aşıcı  <fatih@pardus.org.tr>
	* zorg/probe.py:
		Implement a simplified version of getPrimaryCard.

2009-04-23  Fatih Aşıcı  <fatih@pardus.org.tr>
	* setup.py:
		Do not install modprobe.d config file.

2009-03-30  Fatih Aşıcı  <fatih@pardus.org.tr>
	* data/DriversDB:
		Prefer nvidia-drivers package for 10de:0242.

2009-03-28  Fatih Aşıcı  <fatih@pardus.org.tr>
	* zorg/parser.py:
		Do case-insensitive comparison for entry names

2009-03-20  Fatih Aşıcı  <fatih@pardus.org.tr>
	* zorg/config.py, zorg/consts.py, zorg/hwdata.py, zorg/probe.py:
		- Refactor variable names to increase consistency.
		- Add configuredBus function to get last configured card by
		zorg. This will be used at boot.
		- Use an empty string for xkb variant as not all layouts have
		"basic" variant.
	* zorg/utils.py:
		- Cleanup unused utils.
	* setup.py:
		- Get config and data dirs from zorg module instead of
		hardcoding.

2009-03-08  Fatih Aşıcı  <fatih@pardus.org.tr>
	* zorg/utils.py:
		- Improve backup function to keep last 3 backups.
		- Use pardus-python's new get_kernel_option function. Remove
		the internal one.
	* zorg/config.py, zorg/consts.py, zorg/probe.py:
		- Let Xorg decide most of the configurations. Make
		Screen, Display, Layout and Monitor sections optional.
		- Disable framebuffer size calculation since it tries
		to parse mode name and mode names do not have to be in
		format "WidthxHeight". Also drivers should be clever